service/auth-ui/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-ui
spec:
  replicas: 1
  minReadySeconds: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: auth-ui
          image: auth-ui:latest

          ### for debugging purposes:
          # command: ["sleep"]
          # args: ["100000"]
          # securityContext:
          #   runAsUser: 0 # Run as root
          #   privileged: true # Give full system privileges (use only if needed)
          #   allowPrivilegeEscalation: true # Allow sudo-like behavior (if required)
          #   capabilities:
          #     add: ["SYS_ADMIN"] # Add specific root capabilities (adjust as needed)

          ports:
            - containerPort: 4455
              name: auth-ui
          # https://github.com/ory/kratos-selfservice-ui-node/tree/master?tab=readme-ov-file#configuration
