service/auth-ui/k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-ui
spec:
  type: ClusterIP
  ports:
    - name: service-auth-ui
      port: 80
      targetPort: auth-ui
