service/auth-ui/k8s/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-auth-ui
  namespace: auth
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: https-auth

  hostnames:
    - auth.donation-app.local

  rules:
    - backendRefs:
        - name: auth-ui
          namespace: auth
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
